tests/spec/emit/snapshots/slice_indexing.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test(arr: Slice<int>) {
    arr[0]
  }
---
package main

func test(arr []int) {
	_ = arr[0]
}
