tests/spec/emit/snapshots/slice_is_empty_negated.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> bool {
    !s.is_empty()
  }
---
package main

func test(s []int) bool {
	return len(s) != 0
}
