tests/spec/emit/snapshots/slice_length.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> int {
    s.length()
  }
---
package main

func test(s []int) int {
	return len(s)
}
