tests/spec/emit/snapshots/slice_literal_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    10
  }
  
  fn main() {
    let mut i = 0
    let s = [i, bump(&i)]
    let _ = s
  }
---
package main

func bump(i *int) int {
	*i = 1
	return 10
}

func main() {
	i := 0
	v := i
	s := []int{v, bump(&i)}
	_ = s
}
