tests/spec/emit/snapshots/slice_make_fills_elements_without_go_zero.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn main() {
    let mut maps = Slice.make<mut Map<string, int>>(2)
    let mut first = maps.get(0).unwrap_or(Map.new<string, int>())
    first["k"] = 1
    let second = maps.get(1).unwrap_or(Map.new<string, int>())
    if first.length() != 1 {
      panic("expected a writable empty map element")
    }
    if second.length() != 0 {
      panic("expected each element to get its own map")
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	maps_ := func() []map[string]int {
		s := make([]map[string]int, 2)
		for i := range s {
			s[i] = map[string]int{}
		}
		return s
	}()
	first := lisette.SliceGet(maps_, 0).UnwrapOr(make(map[string]int))
	first["k"] = 1
	second := lisette.SliceGet(maps_, 1).UnwrapOr(make(map[string]int))
	if len(first) != 1 {
		panic("expected a writable empty map element")
	}
	if len(second) != 0 {
		panic("expected each element to get its own map")
	}
}
