tests/spec/emit/snapshots/slice_make_inferred_type.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() -> Slice<string> {
    Slice.make(5)
  }
---
package main

func test() []string {
	return make([]string, 5)
}
